Fix for layout issues caused by div splitting links from blogs required for schema.org to work

--- a/static/style/profile.less
+++ b/static/style/profile.less
@@ -133,7 +133,7 @@ main {
     max-width: 600px;
 }
 
-#profile-body {
+.profile-body {
     max-width: 800px;
     margin: 0px auto;
     margin-top: 18px;
